--- a/portfolio.html
+++ b/portfolio.html
@@ -140,7 +140,7 @@
 
 
         <div class="social-footer">
-            <p class="social-footer-descr">ПРИЄДНУЙТЕСЬ</p>
+            <p class="social-footer-descr">приєднуйтесь</p>
             <ul class="social-footer-list list">
                 <li class="social-footer-element"><a class="social-footer-link link" href=""><svg class="social-icon"
                             width="20" height="20">
